--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
 </head>
 <body>
+    <h1>GIT TUTORIAL</h1>
 
 </body>
 </html>
