--- a/welcome.html
+++ b/welcome.html
@@ -9,7 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
 </head>
 <body>
-    <h1>TITLE</h1>
-
+    <h1>TITLE</h1>  
+    <h1>heading</h1>
 </body>
 </html>
